Fix translation editor bottom tabs overflow
If any of the tabs needs to overflow it will be scrollable instead.

close: #14143

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -655,7 +655,13 @@ form + .login-label {
   z-index: 10;
 }
 
-#history {
+#nearby,
+#keys,
+#others,
+#translations,
+#history,
+#machinery,
+#comments {
   overflow-x: auto;
 }
 
